--- a/index.css
+++ b/index.css
@@ -218,6 +218,7 @@ html{
     animation-name: fadeintotop;
     animation-duration: 2s;
     animation-iteration-count: 1;
+    overflow: scroll;
 }
 
 @keyframes fadeintotop{
