--- a/index.css
+++ b/index.css
@@ -218,7 +218,7 @@ html{
     animation-name: fadeintotop;
     animation-duration: 2s;
     animation-iteration-count: 1;
-    overflow: scroll;
+    overflowY: scroll;
 }
 
 @keyframes fadeintotop{
