--- a/index.css
+++ b/index.css
@@ -432,3 +432,77 @@ html{
     border-style: solid;
     font-family: 'Montserrat Alternates', sans-serif;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+    #seção1, #seção2 {
+        flex-direction: column;
+        height: auto;
+        overflow-y: auto;
+        padding: 2%;
+        width: 95%;
+    }
+
+    #acoesnegativas, #acoespositivas {
+        width: 90%;
+        height: auto;
+        max-height: 35vh;
+        margin-bottom: 10px;
+    }
+
+    #subcontainteracoes {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #fontes, #forms {
+        width: 90%;
+        margin-top: 10px;
+    }
+
+    #blocodesenvolvimento {
+        width: 90%;
+    }
+
+    #footerend {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    #footerimgdiv {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #pandimg {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    #ap1pdiv {
+        height: auto;
+    }
+
+    #ap1pdiv img {
+        height: auto;
+    }
+}
