--- a/index.css
+++ b/index.css
@@ -7,6 +7,8 @@ html{
     margin: 0%;
 }
 
+
+
 #backgroundimgdiv{
     width: 100%;
     height: 15vh;
@@ -175,7 +177,8 @@ html{
     border-top: solid;
     border-width: 2px;
     display: flex;
-    padding: 2%;
+    padding-top: 2%;
+    padding-bottom: 2%;
     flex-direction: column;
     align-items: center;
     background-color: lightgray;
@@ -452,6 +455,7 @@ html{
       height: auto;
       overflow: hidden; 
       padding: 5%;
+      box-sizing: border-box;
     }
   
     #seção1 img, #seção2 img {
@@ -472,7 +476,7 @@ html{
 
   @media (max-width: 762px) {
     #containteracoes {
-      padding: 20px;
+      padding: 0px;
     }
   
     #subcontainteracoes {
@@ -523,7 +527,7 @@ html{
     #containerinteratividade {
       flex-direction: column;
       align-items: center;
-      padding: 20px;
+      padding: 0px;
       gap: 20px;
     }
   
@@ -534,6 +538,7 @@ html{
   
     #forms {
       width: 90%;
+      box-sizing: border-box;
     }
   
     #forms #pandimg {
@@ -575,7 +580,7 @@ html{
       flex-direction: column;
       align-items: center;
       text-align: center;
-      padding: 20px;
+      padding: 0px;
     }
   
     #footerend h2 {
